# llama-stack-provider-trustyai-fms

./: .bandit.yaml  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  notebook-orchestrator-api.ipynb  orchestrator_api.yaml  pyproject.toml  pytest.ini  run.yaml
.agentready/: assessment-20260212-110110.json  assessment-latest.json  report-20260212-110110.html  report-20260212-110110.md  report-latest.html  report-latest.md
.github/workflows/: .pre-commit.yaml  pr-container-build.yaml  publish-2-pypi.yaml  security.yml  smoke.yaml  test-kind.yaml  test-unit-scheduled.yml  test-unit.yml  test.yml
.ipynb_checkpoints/: notebook-orchestrator-api-checkpoint.ipynb
llama_stack_provider_trustyai_fms/: __init__.py  compat.py  config.py  provider.py
llama_stack_provider_trustyai_fms/detectors/: base.py  chat.py  content.py
notebooks/: trustyai-fms-detector-api.ipynb
openshift_manifests/: detector_model_storage.yaml  granite_guard_model.yaml  hap_38m_model.yaml  kustomization.yaml  orchestrator.yaml
providers.d/remote/safety/: provider.yaml  trustyai_fms.yaml
runtime_configurations/: detector_api.yaml
tests/: test_config.py  test_detectors.py  test_moderation.py  test_provider.py
tests/kind/: test_kind.sh
tests/kind/manifests/: gorch.yaml  gorch_cm.yaml  gorch_tls.yaml  llama_stack_distribution.yaml  monitoring.coreos.com_servicemonitors.yaml  vllm_emulator.yaml
tests/unit/: test_config.py  test_detectors.py  test_moderation.py  test_provider.py
