[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-trustyai-fms"
version = "0.1.4"
description = "Remote safety provider for Llama Stack integrating FMS Guardrails Orchestrator and community detectors"
authors = [
    {name = "GitHub: m-misiura"}
]
maintainers = [
    {name = "GitHub: m-misiura"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "llama-stack",
    "fastapi",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "aiosqlite",
    "uvicorn",
    "ipykernel",
    "httpx",  
]

[project.urls]
Homepage = "https://github.com/trustyai-explainability/llama-stack-provider-trustyai-fms"
"Maintainer GitHub" = "https://github.com/m-misiura"

[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack_provider_trustyai_fms*"]

[project.entry-points."llama_stack.providers.remote.safety"]
trustyai_fms = "llama_stack_provider_trustyai_fms.provider:get_provider_spec"

[project.entry-points."llama_stack.providers.remote.shields"]
trustyai_fms = "llama_stack_provider_trustyai_fms.provider:get_shields_provider_spec"